ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: websample-ing
spec:
  rules:
    - host: 127.0.0.1.xip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: websample
              servicePort: 5000
              # serivce:
              #   name: websample
              #   port:
              #     number: 5000
